# dynamodb-generic-capture-trigger

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_tests.py
environment/local-development/docker/: docker-compose.yml
environment/local-development/docker/kowl_conf/: config.yml
environment/local-development/terraform/: main.tf
integration_test/: LoadDataDynamoDB.py
src/: send_to_kafka_function.py
src/kafka_utils/: utils.py
tests/: test_send_to_kafka_function.py  test_utils.py
